W9-10Notes/Kubernetes/Namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: developer
  labels:
    name: developer
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin
  labels:
    name: admin
